--- a/pom.xml
+++ b/pom.xml
@@ -394,7 +394,7 @@
 
     <repositories>
         <repository>
-            <id>Apache Nexus</id>
+            <id>Apache Nexus snapshots</id>
             <url>https://repository.apache.org/content/repositories/snapshots/</url>
             <releases>
                 <enabled>false</enabled>
@@ -403,6 +403,16 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+			<repository>
+				<id>Sonatype OSS snapshots</id>
+				<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+				<releases>
+					<enabled>false</enabled>
+				</releases>
+				<snapshots>
+					<enabled>true</enabled>
+				</snapshots>
+			</repository>
     </repositories>
 
 </project>
